--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <title>Leaderboard App</title>
-</head>
-<body>
-    <div class="app flex-container flex-center flex-column">
-        <main>
-          <header class="header"><h1>Leaderboard</h1></header>
-          <div class="main-container flex-container full-width-container">
-              <section class="scores-section flex-container flex-item flex-column flex-center">
-                <div>
-                  <header class="scores-header flex-container">
-                    <h2>Recent scores</h2>
-                    <button id="refresh" class="refresh-button" title="Refresh the list of scores" type="button">
-                      <i class="bi bi-arrow-clockwise"></i>
-                    </button>
-                  </header>
-                  <ul id="scores" class="scores">
-                  </ul>
-                </div>
-              </section>
-              <section class="input-section flex-container flex-item flex-column flex-center">
-                <div>
-                  <header><h2>Add your score</h2></header>
-                  <form action="#" id="form" class="flex-container flex-column flex-center">
-                    <input type="text" title="Please enter your name" name="name" id="name" placeholder="New Name" required>
-                    <input type="number" title="Please enter a score between 0 and 1000" name="score" id="score" placeholder="New Score" min=0 max=1000 required>
-                    <button class="button submit-button" title="Submit your score" type="submit">Submit</button>
-                  </form>
-                </div>
-                <div class="result">
-                  <p id="result" class="result-message"></p>
-                </div>
-              </section>
-          </div>
-        </main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap link -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Microverse Leaderboard Project</title>
+  </head>
+  <body class="container w-50 d-flex flex-column justify-content-center">
+    <!-- Header -->
+    <header>
+      <h1 class="mb-5">Leaderboard</h1>
+    </header>
+    <section class="d-flex gap-4 justify-content-between">
+      <div class="w-50">
+        <div class="d-flex mb-3 justify-content-between">
+          <h3>Recent scores</h3>
+          <button type="button" class="btn btn-success">Refresh</button>
+        </div>
+
+        <!-- Recent score section -->
+        <table class="table border border-2 table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Score</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Name1</td>
+              <td>Score1</td>
+            </tr>
+            <tr>
+              <td>Name2</td>
+              <td>Score2</td>
+            </tr>
+            <tr>
+              <td>Name3</td>
+              <td>Score3</td>
+            </tr>
+            <tr>
+              <td>Name4</td>
+              <td>Score4</td>
+            </tr>
+            <tr>
+              <td>Name5</td>
+              <td>Score5</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-</body>
+      <!-- Add score section -->
+      <form class="w-50">
+        <h3>Add your score</h3>
+        <div class="mb-3">
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            placeholder="Your name" />
+        </div>
+        <div class="mb-3">
+          <input
+            type="number"
+            class="form-control"
+            id="score"
+            placeholder="Your score" />
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </section>
+  </body>
 </html>
